# multi-compression

./: multi-compression.cabal
src/: MultiCompression.hs
